--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "mongoose": "^5.11.11"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "eslintConfig": {
     "extends": "react-app"
   },
