--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "server": "node index.js --prefix server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"nodemon run server\" \"npm run client\""
+    "dev": "concurrently \"nodemon run server\" \"npm run client\"",
+    "heroku-prebuild": "cd client && npm i && npm start"
   },
   "eslintConfig": {
     "extends": "react-app"
