--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react": "^17.0.0",
+    "@types/react-router": "^5.1.11",
     "bootstrap": "^4.5.3",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
