--- a/client/package.json
+++ b/client/package.json
@@ -26,11 +26,17 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "start": "npm start",
+    "start": "react-scripts start",
     "dev": "concurrently \"npm run server\" \"npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "react-scripts build"
+
+  },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "6.14.10"
   },
   "eslintConfig": {
     "extends": "react-app"
