getting rid of app.js

--- a/client/package.json
+++ b/client/package.json
@@ -30,9 +30,7 @@
     "dev": "concurrently \"npm run server\" \"npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "react-scripts build"
-
+    "eject": "react-scripts eject"
   },
   "engines": {
     "node": "14.15.4",
