--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@types/react-router": "^5.1.11",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react-bootstrap": "^1.4.3"
   },
   "scripts": {
     "start": "npm start --prefix client",
