--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
-    "react-bootstrap": "^1.4.3"
+    "react-bootstrap": "^1.4.3",
+    "react-recaptcha": "^2.3.10"
   },
   "scripts": {
     "start": "npm start --prefix client",
