--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-scroll": "^1.8.1",
